@@ -4,6 +4,7 @@
 	* new private support functions _lasttoken and _wlasttoken to support
 	strtok and wcstok respectively.
 	* fixed lib/msvcrt/stdio/vfscanf.c to remove unnecessary globals.
+	* changed crtdll to use msvcrt's stdio/scanf.c
 
 2003-07-16  Royce Mitchell III <royce3@ev1.net>
 
